--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,5 @@ j2ee.server.domain=/home/brad/glassfish-4.1.1/glassfish/domains/domain1
 j2ee.server.home=/home/brad/glassfish-4.1.1/glassfish
 j2ee.server.instance=[/home/brad/glassfish-4.1.1/glassfish:/home/brad/glassfish-4.1.1/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/home/brad/glassfish-4.1.1
+selected.browser=Chrome
 user.properties.file=/home/brad/.netbeans/8.1/build.properties
