--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-nbproject/private/private.properties
-nbproject/private/private.xml
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+.nb-gradle/
