--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     </context-param>
     <context-param>
         <param-name>BootsFaces_THEME</param-name>
-        <param-value>spacelab</param-value>
+        <param-value>superhero</param-value>
     </context-param>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
